<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (c) Vogler Engineering GmbH. All rights reserved.
    Licensed under the MIT License. See LICENSE.md in the project root for license information.

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_job_progress_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/view_error_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/view_error_image_text"
        android:src="@drawable/ic_warning_black_24dp"
        android:tint="@color/textSuperLight" />

    <TextView
        android:id="@+id/view_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_error_image"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:scrollHorizontally="false"
        android:text="@string/view_error_text"
        android:textAlignment="center"
        android:textColor="@color/textSuperLight"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/view_error_subtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_error_text"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:maxLines="5"
        android:scrollHorizontally="false"
        android:text="@string/view_error_subtext"
        android:textAlignment="center"
        android:textColor="@color/textSuperLight"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/view_error_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_error_subtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:maxLines="5"
        android:scrollHorizontally="false"
        android:textAlignment="center"
        android:textColor="@color/textSuperLight"
        android:textSize="14sp"
        tools:text="Exception in Main..." />

</RelativeLayout>